[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.22.0",
    "mcp[cli]>=1.5.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "polygon-api-client>=1.14.5",
    "python-dotenv>=1.0.1",
    "resend>=2.30.1",
    "playwright>=1.51.0"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
